Rewrote how caching works as to not allow Shopify types/handles to collide, added more tests, typedoc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "editor.minimap.enabled": false
+    "editor.minimap.enabled": false,
+    "codemetrics.basics.EnabledForTS": false,
+    "typescript.tsdk": "node_modules\\typescript\\lib"
 }
