--- a/package.json
+++ b/package.json
@@ -1,31 +1,65 @@
 {
   "name": "shopify-js",
+  "license": "AGPL-3.0",
   "version": "0.0.1",
   "browser": "dist/shopify-js.browser.js",
-  "main": "dist/shopify-js.umd.js",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "dependencies": {
     "localforage": "^1.5.5"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.44",
+    "@types/jest": "^22.0.1",
     "@types/node": "^8.5.7",
     "awesome-typescript-loader": "^3.4.1",
+    "fetch-mock": "^6.0.0",
     "gts": "^0.5.3",
+    "isomorphic-fetch": "^2.2.1",
+    "jest": "^22.1.4",
+    "shx": "^0.2.2",
     "source-map-loader": "^0.2.3",
+    "ts-jest": "^22.0.1",
     "tslint": "^5.8.0",
     "tslint-eslint-rules": "^4.1.1",
-    "typescript": "~2.6.1",
-    "unfetch": "^3.0.0",
+    "typedoc": "^0.10.0",
+    "typescript": "^2.7",
     "webpack": "^3.10.0"
   },
   "scripts": {
-    "compile": "NODE_ENV=production webpack",
+    "compile": "tsc -p . && shx cp package.json build/package.json",
     "watch": "webpack --progress --watch",
     "check": "gts check",
     "clean": "gts clean",
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run check"
+    "posttest": "npm run check",
+    "test": "jest",
+    "docs": "typedoc --excludePrivate --excludeNotExported --out docs/ src/"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "mapCoverage": true,
+    "roots": [
+      "src/"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|\\.|/)(test|spec)\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "globals": {
+      "ts-jest": {
+        "skipBabel": true
+      }
+    }
   }
 }
