--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,14 @@
   "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "build",
-    "target": "es5",
+    "outDir": "build/",
+    "target": "es3",
     "lib": ["es2015", "es2017", "dom"],
-    "sourceMap": true,
-    "inlineSourceMap": false,
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "pretty": false,
+    "sourceMap": false,
+    "inlineSourceMap": true,
     "strict": true,
     "noEmitOnError": true,
     "noImplicitAny": true,
