--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "pretty": false,
-    "sourceMap": false,
-    "inlineSourceMap": true,
+    "sourceMap": true,
     "strict": true,
     "noEmitOnError": true,
     "noImplicitAny": true,
