--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run check",
     "test": "jest",
-    "docs": "typedoc --excludePrivate --exclude **/*.test.ts --out docs/ src/"
+    "posttest": "npm run check",
+    "docs": "typedoc --excludePrivate --exclude **/*.test.ts --out docs/ src/",
+    "postdocs": "shx cp .nojekyll docs/.nojekyll"
   },
   "jest": {
     "collectCoverage": true,
