--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
   "main": "dist/main.js",
   "types": "dist/build/index.d.ts",
   "dependencies": {
-    "localforage": "^1.5.6"
+    "localforage": "^1.7.1"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.44",
     "@types/isomorphic-fetch": "^0.0.34",
-    "@types/jest": "^22.0.1",
-    "fetch-mock": "^6.0.0",
-    "gts": "^0.5.3",
+    "@types/jest": "^22.2.3",
+    "fetch-mock": "^6.4.2",
+    "gts": "^0.6.0",
     "isomorphic-fetch": "^2.2.1",
-    "jest": "^22.1.4",
+    "jest": "^23.0.1",
     "shx": "^0.2.2",
-    "ts-jest": "^22.0.1",
-    "ts-loader": "^3.4.0",
-    "ts-node": "^4.1.0",
-    "typedoc": "^0.10.0",
-    "typescript": "^2.7",
-    "webpack": "^3.10.0"
+    "ts-jest": "^22.4.6",
+    "ts-loader": "^4.3.0",
+    "ts-node": "^6.0.5",
+    "typedoc": "^0.11.1",
+    "typescript": "^2.8.3",
+    "webpack": "^4.10.1",
+    "webpack-cli": "^2.1.4"
   },
   "scripts": {
     "compile": "webpack",
